<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="600dp"
        android:ems="10"
        android:hint="@string/edit_text"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_search"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#55D828"
        android:hint="@string/button_search"
        android:onClick="searchOnGoogle"
        android:text="Search"
        app:layout_constraintBaseline_toBaselineOf="@+id/inputText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inputText"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/btn_notification"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="160dp"
        android:background="#F10B0B"
        android:hint="@string/button_push_notification"
        android:text="Notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTakePicture"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:layout_marginTop="360dp"
        android:background="#9C27B0"
        android:enabled="true"
        android:hint="@string/take_picture"
        android:text="Take a Picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="179dp"
        android:layout_height="84dp"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="244dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radBtn_frontCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/front_camera"
            android:text="Front Camera" />

        <RadioButton
            android:id="@+id/radBtn_backCamera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/back_camera"
            android:text="Back Camera" />
    </RadioGroup>


    <Button
        android:id="@+id/playMusic"
        android:layout_width="129dp"
        android:layout_height="66dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/mu"
        android:text="Play Music"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>